Create fetch all product api
