# server/src/controllers/product.controller.js
@@ -1,0 +1,180 @@
+import database from '../database/db.js';
+import { catchAsyncErrors } from '../middlewares/catchAsyncError.js';
+import ErrorHandler from '../middlewares/errorMiddlewares.js';
+import { v2 as cloudinary } from 'cloudinary';
+
+export const createProduct = catchAsyncErrors(async (req, res, next) => {
+  const { name, description, price, category, stock } = req.body;
+  const created_by = req.user.id;
+
+  if (!name || !description || !price || !category || !stock) {
+    return next(
+      new ErrorHandler('Please provide complete product details.', 400)
+    );
+  }
+
+  const uploadedImages = [];
+
+  if (req.files && req.files.images) {
+    const images = Array.isArray(req.files.images)
+      ? req.files.images
+      : [req.files.images];
+
+    for (const image of images) {
+      const result = await cloudinary.uploader.upload(image.tempFilePath, {
+        folder: 'Ecommerce_Product_Images',
+        width: 1000,
+        crop: 'scale',
+      });
+
+      uploadedImages.push({
+        url: result.secure_url,
+        public_id: result.public_id,
+      });
+    }
+  }
+
+  const product = await database.query(
+    'INSERT INTO products (name, description, price, category, stock, images, created_by) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *',
+    [
+      name,
+      description,
+      price,
+      category,
+      stock,
+      JSON.stringify(uploadedImages),
+      created_by,
+    ]
+  );
+
+  res.status(201).json({
+    success: true,
+    message: 'Product created successfully.',
+    product: product.rows[0],
+  });
+});
+
+export const fetchAllProducts = catchAsyncErrors(async (req, res, _next) => {
+  const { availability, price, category, ratings, search } = req.query;
+  const page = parseInt(req.query.page) || 1;
+  const limit = 10;
+  const offset = (page - 1) * limit;
+
+  const conditions = [];
+  const values = [];
+  let index = 1;
+  const paginationPlaceholders = {};
+
+  // filter product by availability
+  if (availability === 'in-stock') {
+    conditions.push('stock > 5');
+  } else if (availability === 'limited') {
+    conditions.push('stock > 0 AND stock <= 5');
+  } else if (availability === 'out-of-stock') {
+    conditions.push('stock = 0');
+  }
+
+  // filter product by price
+  if (price) {
+    const [minPrice, maxPrice] = price.split('-');
+    if (minPrice && maxPrice) {
+      conditions.push(`price BETWEEN $${index} AND $${index + 1}`);
+      values.push(minPrice, maxPrice);
+      index += 2;
+    }
+  }
+
+  // filter products by category
+  if (category) {
+    conditions.push(`category ILIKE $${index}`);
+    values.push(`%${category}%`);
+    index++;
+  }
+
+  // filter products by rating
+  if (ratings) {
+    conditions.push(`rating >= $${index}`);
+    values.push(`${ratings}`);
+    index++;
+  }
+
+  // Add search query
+
+  if (search) {
+    conditions.push(
+      `(p.name ILIKE $${index} OR p.description ILIKE $${index})`
+    );
+    values.push(`%${search}%`);
+    index++;
+  }
+
+  const whereClause = conditions.length
+    ? `WHERE ${conditions.join(' AND ')}`
+    : '';
+
+  // get count of filtered product
+
+  const totalProductsResult = await database.query(
+    `SELECT COUNT(*) FROM products p ${whereClause}`,
+    values
+  );
+
+  const totalProducts = parseInt(totalProductsResult.rows[0].count);
+
+  paginationPlaceholders.limit = `$${index}`;
+  values.push(limit);
+  index++;
+
+  paginationPlaceholders.offset = `$${index}`;
+  values.push(offset);
+  index++;
+
+  // fetch with reviews
+
+  const query = `
+    SELECT p.*, COUNT(r.id) AS review_count 
+    FROM products p 
+    LEFT JOIN review r ON p.id = r.product_id
+    ${whereClause}
+    GROUP BY p.id
+    ORDER BY p.created_at DESC
+    LIMIT ${paginationPlaceholders.limit}
+    OFFSET ${paginationPlaceholders.offset}
+  `;
+
+  const result = await database.query(query, values);
+
+  // query for fetching new products
+  const newProductQuery = `
+    SELECT p.*,
+    COUNT(r.id) AS review_count
+    FROM products p
+    LEFT JOIN review r ON p.id = r.product_id
+    WHERE p.created_at >= NOW() - INTERVAL '30 days'
+    GROUP BY p.id
+    ORDER BY p.created_at DESC
+    LIMIT 8
+  `;
+  const newProductsResult = await database.query(newProductQuery);
+
+  // query for fetching top rated products
+  const topRatedQuery = `
+    SELECT p.*,
+    COUNT(r.id) AS review_count
+    FROM products p
+    LEFT JOIN review r ON p.id = r.product_id
+    WHERE p.rating > 4.5
+    GROUP BY p.id
+    ORDER BY p.rating DESC, p.created_at DESC
+    LIMIT 8
+  `;
+  const topRatedResult = await database.query(topRatedQuery);
+
+  res.status(200).json({
+    success: true,
+    products: result.rows,
+    totalProducts,
+    newProducts: newProductsResult.rows,
+    topRatedProducts: topRatedResult.rows,
+  });
+});
